--- a/jstable.html
+++ b/jstable.html
@@ -4,7 +4,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Bootstrap Example</title>
+  <title>Jinwei Table Example</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
@@ -99,10 +99,10 @@ table.responsive-table th {
 
 span.up {
   font-size: 26px;
-  color: blue;
    padding: 3px; width: 10px;
    /*display: inline-block;  */
    /* 1002 Add*/
+  background-color: #e0ebff;
 }
 
 span.down {
@@ -130,9 +130,20 @@ button {
     
 }
 
+.btn-plus-down {
+    background-color: rgb(192,192,192);
+    border-radius: 90%;
+
+}
+
+.btn-minus-down {
+    background-color: rgb(218,218,218);
+    
+}
+
 
 .num {
-  font-size: : 12px;
+  font-size: 12px;
 
 }
 
@@ -280,7 +291,7 @@ td {
   <nav class="navbar navbar-inverse navbar-fixed-top">
     <!--button for collapse1015 -->
 
-    <a class="navbar-brand" href="#" id="t1">neonexus</a>
+    <a class="navbar-brand" href="#" id="t1">Jinwei</a>
           <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
               <a class="nav-link" href="#" id ="bn1">Back to Bottom <span class="sr-only">(current)</span></a>
